2001-10-26  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (calc_size): if width_left < 0 and ! firstRun,
	then break line here
	(draw_background): don't call html_object_draw for parent as this
	means we draw itself too (so when flow is drawed from drawing
	queue, it's rendered twice which means uglyness for gdkxft) I've
	tried to reproduce bug #6, for which this was intended as fix, but
	can't reproduce it, so I hope #6 is fixed properly now.

	* htmlobject.c (html_object_is_clue): added HTML_TYPE_CLUEALIGNED,
	which Larry probably forgot commit

2001-10-25  Larry Ewing  <lewing@ximian.com>

	* htmltokenizer.c (flush_entity): don't add the TAG_ESCAPE to the
	output when fluhing the entity.
	(in_entity): don't collapse entities in tags or attributes.

	* htmlimage.c (image_update_url): don't do anything if there is no
	map.
	(get_url): return the image->url if final->url is NULL.

2001-10-25  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cut-and-paste.c (insert_object): use
	html_cursor_jump_to_position_no_spell
	(insert_object_do): ditto
	(insert_object): ditto

	* htmlcursor.c (html_cursor_jump_to_position_no_spell): new
	function, preserves engine's need_spell_check flag while jumps

	* htmlengine-edit-cut-and-paste.c (append_object): remember
	position when empty flow is already prepared

	* htmlengine.c (check_cursor): new function, checks if cursor
	position is valid

	* htmlengine-edit-cut-and-paste.c (insert_object_do): save orig
	cursor after split
	(insert_object_do): preserve position before for orig
	(isolate_tables): rewritten once more
	(insert_undo_action): update to isolate_tables changes
	(insert_setup_undo): ditto
	(insert_object): ditto

	* htmlobject.c (move_object_cursor): allow cursor moves in flow
	where containers are mixed with leaf objects

2001-10-24  Larry Ewing  <lewing@ximian.com>

	* htmlobject.c (html_object_is_clue): add HTML_TYPE_CLUEALIGNED to
	the type list.

	* htmlimage.c (html_image_animation_new): initialize some